--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/test.test
+EditorStartupMap=/Game/Maps/testMap.testMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -10,7 +10,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Maps/test.test
+GameDefaultMap=/Game/Maps/testMap.testMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Player/MyBindaGAM312ProjectGameModeBase.MyBindaGAM312ProjectGameModeBase_C
 GlobalDefaultServerGameMode=None
